2000-11-16  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* smi.conf-example: Added a configuration file example.

	* configure.in: Dir separator is now configurable and distinguished
	in util/smiIsPath().

	* win/*: Some changes for clean MSVC compilation. Yigal.

2000-11-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* win/config.h: Added macros for 64 bit types on MSVC systems.
	Added a necessary compiler flag to compile scanner-*.c on MSVC.
	Thanks to Yigal.

	* configure.in: Fixed: completely broken AC_TRY_RUN check for
	64 bit types. Somehow, I did it in a way that was syntactically
	correct. ;-)

	* acconfig.h: renamed MIN/MAX macros to suppress redefinitions
	on Solaris 2.6+.

2000-11-13  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.8.tar.gz: released version 0.2.8.

	* test/Makefile.am: Added tests for formats: identifiers,
	metrics, xml, cm, python.
	
	* tools/dump-jax.c: Fixed dangling pointers. Test suite
	is happy again.

	* tools/dump-corba.c: The driver now creates idl and oid files
	instead of writing to stdout.
	
	* test/*: Reorganized the test suite. All scripts for
	smidump scripts are now identical. Added jax test (and found
	a bug that is not yet fixed).

2000-11-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-netsnmp.c: Renamed dump-ucdsnmp.c to dump-netsnmp.c.

	* test/Makefile.am: Commented out checks for the obsolete
	corba-{idl,oid} checks to make the test suite happy.

	* configure.in: The availability of `long long' type is now
	checked during configuration. The result now also affects printf
	formats.

	* configure.in: Path separator is now configurable (useful to
	use ":" instead of ";" as well in cygwin environments).

2000-11-09  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smidump.c: Juergen did a major rework of the internal
	smidump interface for the output drivers. Visible changes:
	corba-idl and corba-oid are integrated into a single format
	corba; -o option.
