@@ -8,14 +8,15 @@
 # See the file "COPYING" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# @(#) $Id: Makefile.am,v 1.12 2000/06/18 11:45:02 strauss Exp $
+# @(#) $Id: Makefile.am,v 1.13 2000/06/28 16:01:23 strauss Exp $
 #
 
 AUTOMAKE_OPTIONS	= no-dependencies foreign
 
 EXTRA_DIST		= ANNOUNCE \
 			  win/Makefile.mingw win/README.mingw win/README.win \
-			  win/config.h win/makefile win/win.c win/win.h
+			  win/config.h win/makefile win/win.c win/win.h \
+			  smi.conf-example
 
 SUBDIRS			= lib tools mibs test doc
 
